[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/inventory/Inventory.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/inventory/inventory_window.png" type="Texture" id=2]
[ext_resource path="res://scripts/inventory/InventoryButtons.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/inventory/inventoryButtons.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/inventory/inventoryButtons_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/emberfont/emberfont.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/UI/inventory/slot.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/inventory/select.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/inventory/weaponlogo.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 83
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 83
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="InventoryBackground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -100.0
texture = ExtResource( 2 )
expand = true

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
margin_left = 392.0
margin_top = 34.0
margin_right = -130.0
margin_bottom = 127.0
script = ExtResource( 3 )

[node name="Use" type="TextureButton" parent="Buttons"]
editor/display_folded = true
anchor_right = 0.33
anchor_bottom = 1.0
margin_left = 3.0
margin_right = -3.0
disabled = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Buttons/Use"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -0.440002
margin_bottom = 3.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "use"
align = 1
valign = 1

[node name="Drop" type="TextureButton" parent="Buttons"]
editor/display_folded = true
anchor_left = 0.33
anchor_right = 0.66
anchor_bottom = 1.0
margin_left = 3.0
margin_right = -3.0
disabled = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Buttons/Drop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -0.440002
margin_bottom = 3.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "drop"
align = 1
valign = 1

[node name="Info" type="TextureButton" parent="Buttons"]
editor/display_folded = true
anchor_left = 0.66
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_right = -3.0
disabled = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Buttons/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -0.440002
margin_bottom = 3.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "info"
align = 1
valign = 1

[node name="InventoryGrid" type="ScrollContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = 150.0
margin_right = -130.0
margin_bottom = -35.0
scroll_horizontal_enabled = false

[node name="Slots" type="GridContainer" parent="InventoryGrid"]
columns = 2

[node name="Items" type="Control" parent="InventoryGrid"]

[node name="SpecialSlots" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="0" type="Control" parent="SpecialSlots"]
editor/display_folded = true
margin_left = 70.0
margin_top = 50.0
margin_right = 142.0
margin_bottom = 122.0
rect_min_size = Vector2( 72, 72 )
__meta__ = {
"_edit_group_": true
}

[node name="Slot" type="Sprite" parent="SpecialSlots/0"]
editor/display_folded = true
texture = ExtResource( 7 )
centered = false
offset = Vector2( 4, 4 )

[node name="Select" type="Sprite" parent="SpecialSlots/0/Slot"]
editor/display_folded = true
visible = false
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 8 )
centered = false
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpecialSlots/0/Slot/Select"]
autoplay = "select"
anims/select = SubResource( 3 )

[node name="WeaponLogo" type="Sprite" parent="SpecialSlots/0"]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
position = Vector2( 9, 9 )
scale = Vector2( 3, 3 )
texture = ExtResource( 9 )
centered = false

[node name="ItemsNotInScroll" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
[connection signal="pressed" from="Buttons/Use" to="Buttons" method="_on_Use_pressed"]
[connection signal="button_down" from="Buttons/Drop" to="Buttons" method="_on_Drop_button_down"]
[connection signal="button_up" from="Buttons/Drop" to="Buttons" method="_on_Drop_button_up"]
[connection signal="pressed" from="Buttons/Info" to="Buttons" method="_on_Info_pressed"]
